# markov-matrix

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: generate_gif.py
markov_matrix/: __init__.py  matrix_chain.py
tests/: test_matrix_chain.py
