[tool.poetry]
name = "markov-matrix"
version = "0.1.0"
description = "A package for generating markov matrices"
authors = ["peder2911 <pglandsverk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<=3.10"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
jedi = "^0.18.0"
pylint = "^2.11.1"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
